Refactor user controller and add new API documentation
