# documentation/swagger.yaml
@@ -78,11 +78,11 @@ paths:
         401:
           description: Authentication failure
           schema: 
-            $ref: '#/definitions/Error'
-        default:
-          description: Unexpected error
+            type: string
+        500:
+          description: Internal server error
           schema:
-            $ref: '#/definitions/Error'
+            type: string
   
   /auth/twitter:
     get: 
@@ -263,19 +263,16 @@ paths:
             Number of items to retrieve. Default is 5, maximum is 100.
       responses:
         200:
-          description: Array of favorites for the given user
+          description: Array of favorites for the authenticated user.
           schema:
             type: array
             items:
               $ref: '#/definitions/Favorite'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+        404:
+          description: No favorites found
     post: 
       summary: Update Favorites
-      description: |
-        Save a new favorite or edit an existing one. 
+      description: Save a new favorite or edit an existing one. 
       tags:
         - User
       parameters:
@@ -286,11 +283,29 @@ paths:
             $ref: '#/definitions/Favorite'
       responses:
         200:
-          description: Creation/Update of favorites successful
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+          description: Creation/Update of favorites successful.
+        400:
+          description: Request malformed.
+        500:
+          description: Internal server error.
+            
+  /account/favorites/{favoriteId}:
+    delete:
+      summary: Delete Favorite
+      description: Deletes the favorite with the given id.
+      tags:
+        - User
+      parameters:
+        - name: favoriteId
+          in: path
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Deletion of favorite sucessful
+        500:
+          description: Internal server error.
             
   /account/bookings:
     get:
@@ -319,15 +334,15 @@ paths:
             Number of items to retrieve. Default is 5, maximum is 30.
       responses:
         200:
-          description: Booking history for the given user
+          description: Booking history for the given user.
           schema:
             type: array
             items:
               $ref: '#/definitions/Booking'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
+        404:
+          description: No booking available.
+        500:
+          description: Internal server error.
     post: 
       summary: Add Booking
       description: Create a new booking. 
@@ -762,6 +777,12 @@ definitions:
       longitude:
         type: number
         format: double
+  Place:
+    properties:
+      description:
+        type: string
+      location:
+        $ref: '#/definitions/Location'
   Segment: 
     properties:
       id:
@@ -785,8 +806,8 @@ definitions:
         format: int32
         description: | 
           Travel option used. 
-          Stay = 0, Walk = 1, Taxi = 2, Car = 4, 
-          Bus = 8, Train = 16, Plane = 32
+          Walk = 1, Car = 2, Bus = 4, Train = 8, 
+          Flight = 16, Taxi = 32, Ferry = 64
       price:
         type: number
         format: double
@@ -811,9 +832,6 @@ definitions:
       image:
         type: string
         description: Image URL of the user
-      promo-code:
-        type: string
-        description: Promo code of the user
   Address:
     properties:
       street: 
@@ -827,22 +845,16 @@ definitions:
         type: string
   Favorite:
     required: 
-      - start
-      - end
+      - origin
+      - destination
     properties:
       id:
         type: string
         description: Unique identifier for the favorite
-      start:
-        type: string
-        description: |  
-          The start location of the booking. Can be an address
-          or a description (e.g. home)
-      end:
-        type: string
-        description: |  
-          The end location of the booking. Can be an address
-          or a description (e.g. company name)
+      origin:
+        $ref: '#/definitions/Place'
+      destination:
+        $ref: '#/definitions/Place'
       transport:
         type: array
         items:
@@ -850,8 +862,8 @@ definitions:
           format: int32
           description: |
             Travel option used. 
-            Walk = 1, Taxi = 2, Car = 4, Bus = 8, 
-            Train = 16, Plane = 32
+            Walk = 1, Car = 2, Bus = 4, Train = 8, 
+            Flight = 16, Taxi = 32, Ferry = 64
   Booking:
     required:
       - id
@@ -1031,6 +1043,11 @@ definitions:
         description: |
           Can be used to store any type of information that 
           then can be used to show an icon in the frontend.
+      action:
+        type: string
+        description: |
+          The action property can be used to store some action
+          that will be executed, if the user accepts the message.
   Error:
     properties:
       code:
